# gfx-rs-testing

./: Cargo.toml
src/: main.rs  model.rs  shader.frag  shader.vert  texture.rs
src/cat/: cat_v10.mtl
